# REVIVAL

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile
.github/workflows/: wasm-pages.yml
DEMO/: CHASE.CPP  CITY.CPP  CITY.H  CMakeLists.txt  CRASH.CPP  CREDITS.CPP  Config.cpp  Config.h  END.CPP  FOUNTAIN.CPP  FOUNTAIN.H  FillerTest.cpp  FillerTest.h  GLAT.H  GREETS.CPP  Glat.cpp  ImageCompression.cpp  PhotonTracer.cpp  PhotonTracer.h  REV.CPP  RT.h  Raytracer.cpp  Rev.h  SDL2.cpp  SDL2.h  SceneTick.h  Scenes.h  Snapshot.cpp  Snapshot.h  coi-serviceworker.js  shell.html
FDS/: CMakeLists.txt  Clipper.cpp  Clipper.h  FRUSTRUM.H  Gradient.cpp  Gradient.h  Threads.h
FDS/3DS/: 3DS_READ.CPP  FUTILS.CPP  FUtils.h  MATERIAL.CPP  TRACKS.CPP  WORLD.CPP
FDS/Base/: BaseDefs.h  Color.h  FDS_DECS.H  FDS_DEFS.H  FDS_VARS.H  Face.h  Material.h  Matrix.h  Object.h  Quaternion.h  Spline.h  Surface.h  Texture.h  TriMesh.h  Vector.h  Vertex.h
FDS/CAMERAS/: CAMERAS.CPP
FDS/DPMI/: DPMI.CPP
FDS/FILLERS/: FILLERS.CPP  IX.cpp  IX.h  IXFZ.cpp  IXGZ.cpp  IXTGZ.cpp  IXTZ.cpp  Mekalele.cpp  Mekalele.h  SimdHelpers.h  TheOtherBarry.h
FDS/FLD/: FLD_CONV.CPP  FLD_MAT.CPP  FLD_READ.CPP  FLD_READ.H
FDS/FRUSTRUM/: FRUSTRUM.CPP
FDS/IMGCODE/: IMGCODE.CPP  QUANTUM.H  stb_image.h
FDS/IMGGENR/: IMGGENR.CPP  IMGGENR.H  WOBTR.ASM  WOBTR320.ASM  WOBTRXXX.ASM
FDS/IMGPROC/: Imgproc.cpp
FDS/ISR/: ISR.CPP
FDS/MATH/: BASEMATH.H  MATH.CPP
FDS/MISC/: MOUSE.CPP  Memmgr.cpp  PREPROC.CPP  TABLES.CPP
FDS/RADIO/: RADIO.CPP
FDS/RENDER/: GENERAL.H  RENDER.CPP  SORTS.H
FDS/SkyCube/: SkyCube.cpp
FDS/V3D/: V3D_READ.CPP
FDS/VESA/: FONTS.CPP  VESA.CPP  VESA_TABLES.CPP  Vesa.h
FDS/simd/: instrset.h  instrset_detect.cpp  vectorf128.h  vectorf256.h  vectori128.h
FDS/simde/: hedley.h
FDS/simde/x86/: sse2.h
Modplayer/: CMakeLists.txt  Modplayer.cpp  Modplayer.h  Modplayer.vcxproj  Modplayer.vcxproj.filters
Original/READERS/LWREAD/: 1.LWS  FLARES.FLD  FLDSAVE.CPP  LWO08.CPP  LWOREAD.CPP  LWREAD.ARJ  LWREAD.H  LWSREAD.CPP  OFIR.FLD  SCENE.LWS  SKY.LWO  SURFACE.LWO  TEST.FLD
Original/READERS/LWREAD/BIGFOOT/: BF_BODY.LWO  BF_BODYX.LWO  BF_HEAD.LWO  BF_HIPS.LWO  BF_LARM1.LWO  BF_LARM2.LWO  BF_LFOOT.LWO  BF_LLEG1.LWO  BF_LLEG2.LWO  BF_RARM1.LWO  BF_RARM2.LWO  BF_RFOOT.LWO  BF_RLEG1.LWO  BF_RLEG2.LWO  BLAT.LWS  STAGE.LWO  TEST.FLD  WALK01.LWS
Original/READERS/LWREAD/CITY/: 1  B.LWS  B1S.LWO  TEST.FLD
Original/READERS/LWREAD/COW1/: COWS_LEG.LWO  DAMYFL.LWO  SN1.LWS  SURF2.LWO  TEST.FLD
Original/READERS/LWREAD/CUBE/: 1  CUBE.LWO  CUBE.LWS  TEST.FLD
Original/READERS/LWREAD/D_CITY/: ABULANS.LWO  ALL.LWO  B1.LWO  B2.LWO  B3.LWO  B4.LWO  B5.LWO  BIKE.LWO  BUS.LWO  CAR1.LWO  CAR2.LWO  CITY.LWS  DJ_CITY.LWS  D_CITY.LWS  L_PAS.LWO  PAS.LWO  PAS1.LWO  PAS2.LWO  PAS3.LWO  POLIECE.LWO  SHIP1.LWO  TAXI.LWO  TEST.FLD  TRA_FRNT.LWO  TRA_VAGN.LWO  WATER.LWO
Original/READERS/LWREAD/FLARES/: 1  BBODY.LWO  BWING1.LWO  BWING2.LWO  COWS_LEG.LWO  COZ.LWO  F2.LWO  FLARES.FLD  FLARES.LWS  SCENE_1.FLD  SCENE_1.LWS  SKY.LWO  TREE.LWO
Original/READERS/LWREAD/ILENIX/: ALL.LWO  ALL2.LWO  ALL3.LWO  ALL4.LWO  DOOR1.LWO  DOOR2.LWO  ILENIX.LWO  L1_1.LWO  L1_2.LWO  L2_1.LWO  L2_2.LWO  L3_1.LWO  L3_2.LWO  L4_1.LWO  L4_2.LWO  L5_1.LWO  L5_2.LWO  L6_1.LWO  L6_2.LWO  L7_1.LWO  L7_2.LWO  L8_1.LWO  L8_2.LWO  SHIP.LWS  STARS.LWO  TEST.FLD
Original/READERS/LWREAD/MAX/: CEL.LWO  O1.LWO  O2.LWO  O3.LWO  SF.LWO
Original/READERS/LWREAD/MECHWALK/: ALL.LWO  L_LEG1.LWO  L_LEG2.LWO  MW1.LWS  R_LEG1.LWO  R_LEG2.LWO  TEST.FLD
Original/READERS/LWREAD/MW/: HULL.LWO  HULL2.LWO  L_LEG1.LWO  L_LEG2.LWO  MW1.LWS  R_LEG1.LWO  R_LEG2.LWO  TEST.FLD
Original/READERS/LWREAD/OBJECTS/: BALL.LWO  BALL2.LWO  TETRA.LWO
Original/READERS/LWREAD/OFIR/: FLDSAVE.CPP  LWOREAD.CPP  LWREAD.H  LWSREAD.CPP
Original/READERS/LWREAD/OLD/: LWO08.CPP  LWOREAD.CPP
Original/READERS/LWREAD/SCENE2/: 1  2.LWS  ROOM1.LWO  TEST.FLD
Original/READERS/LWREAD/SFIT/: 1.LWS  HI.LWS  SFIT.LWO  TEST.FLD
Original/READERS/LWREAD/SHIT/: BOX.LWO  SHIT.LWO  SHIT.LWS  SHIT2.LWS  SHIT3.LWS  TEST.FLD
Original/READERS/LWREAD/SOLAR/: BALL.LWO  SOLAR.LWS  TEST.FLD
Original/READERS/LWREAD/TEST/: DIK.LWO  TEST.FLD  TICK.LWS
Original/READERS/LWREAD/TEST2/: 1.LWO  2.LWO  3.LWO  4.LWO  5.LWO  6.LWO  H.LWO  TEST.FLD  TEST.LWS
Original/READERS/LWREAD/YANAY/: COW1.FLD  ILENIX.FLD  JONJON.ARJ  SCENE1.FLD  SCENE2.FLD
Original/READERS/LWS_Reader/: LWS_Reader.sln  LWS_Reader.vcxproj  LWS_Reader.vcxproj.filters
Original/READERS/OBJREAD/: OBJ_READ.CPP  OBJ_READ.H
Original/READERS/OBJREAD/DOCS/: README.TXT  SS0288_1.TXT  SS0288_2.TXT  SS0288_3.TXT  SS0288_4.TXT  SS0288_5.TXT  SS0288_6.TXT
Original/Scenes/CITY/: ABULANS.LWO  B1F.LWO  B1_1.LWO  B2.LWO  B2F.LWO  B2_F.LWO  B3F.LWO  B3_F.LWO  B4.LWO  B4F.LWO  B5.LWO  B5F.LWO  B7.LWO  BUS.LWO  CITY.LWS  CITY_J~1.LWS  D_CITY.LWS  D_CITY~1.LWS  LL_PAS1.LWO  PAS.LWO  PAS1.LWO  POLIECE.LWO  SHIP.LWO  TAXI.LWO  TRAIN2.MOT  test.fld
Original/dos-rev/FDS/: 1  D.BAT  DO.BAT  FDS.BAK  FDS.LNK  JPEGLIBD.LIB  LIB.BAT  LINKALL.BAT  MAKE3DS.BAT  MAKEASM.BAT  MAKEFILL.BAT  MAKEFLD.BAT  MAKEIMG.BAT  MAKEIMGG.BAT  MAKEIMGP.BAT  MAKEISR.BAT  MAKEMDS.BAT  MAKEPCL.BAT  MAKEREND.BAT  MAKEV3D.BAT  MAKEVESA.BAT  MEX.BAT  MIDAS.LIB  PACKSRC.BAT  R.BAT  RELINK.BAT  SETDEBUG.BAT  SETNORM.BAT  T.BAT  TOFIX.BAK  UNARJ.LIB
Original/dos-rev/REVIVAL/: 1  C.BAT  CHASE.CPP  CITY.BAK  CITY.CPP  CRASH.CPP  CREDITS.CPP  DSCN.ARJ  DSRC.ARJ  END.CPP  FDS.LIB  FDS_DECS.H  FDS_DEFS.H  FDS_VARS.H  FOUNT.CPP  FOUNTAIN.BAK  FOUNTAIN.CPP  FOUNTAIN.H  GLAT.BAK  GLAT.CPP  GLATO.BAK  GREEET.CPP  GREETS.BAK  GREETS.CPP  MAKEFILE  REV.ARJ  REV.BAK  REV.CPP  REV.H  REV.LNK  SHIT.CPP  TXTR.ARJ
Runtime/: rev.cfg
Runtime/SCENES/: CITY.FLD
Scenes/_archive/end-scene/: END.FLD
Scenes/_archive/runtime-variants/: CHASE-orig.FLD  CITY-blah.FLD  CITY-new.FLD  CITY-orig.FLD  GREETS-new.FLD  fountain-test.fld
Scenes/_archive/scenes-stale/: CRASH.FLD
docs/: ENGINE.md
tools/: snapshot_diff.py
zlib/contrib/masmx86/: inffas32.lst  match686.lst
(+295 files in other folders)
